--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width initial-scale=1.0" />
     <title>SWAPD</title>
     <link rel="stylesheet" href="/style.css" />
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <script defer src="/bundle.js"></script>
   </head>
   <body>
